# software-distillery

./: .editorconfig  .gitignore  AGENTS.md  Dockerfile.alpine  Dockerfile.debian  LICENSE  README.md
.github/workflows/: build-clang-19.yml  build-node-nvm.yml  build-python-2.7.yml  build-python-3-pyenv.yml  build-python-3.14-pyenv.yml  build-simple-downloader.yml  build.yml  check-python-2.7-examples.yml  check-simple-downloader.yml  cleanup-untagged-images.yml
.llm/docs/: 20241211_workflow-force-upload-error-handling.md  20251209_apt-get-safe-improvements.md  20251209_clang19-symlink.md  20251209_cleanup-untagged-ghcr.md  20251209_node-nvm-alpine-bzip2.md  20251209_node-nvm-dogfooding.md  20251209_node-nvm-python-3.13.11.md  20251209_node-nvm-ripvex.md  20251209_pyenv-latest-version.md  20251209_pyenv-runtime-node-nvm.md  20251209_python-pyenv-multi-version.md  20251210_cleanup-tool-containerization.md  20251210_cleanup-untagged-ghcr.md  20251210_migrate-cleanup-urllib-to-requests.md  20251210_node-nvm-clang-cstring.md  20251210_refactor-cleanup-tool-package-structure.md  20251211_clang19-ripvex.md  20251211_update-python-workflow-runners.md
clang-19/: Dockerfile.alpine
doc/: DEBUG_GOCURL.md
node-nvm/: Dockerfile.alpine  Dockerfile.debian
python-2.7/: Dockerfile.alpine  Dockerfile.debian  README.md
python-3-pyenv/: Dockerfile.alpine  Dockerfile.debian
python-3.14-pyenv/: Dockerfile.alpine  Dockerfile.debian
tools/cleanup-untagged-images/: .dockerignore  Dockerfile  cleanup.py  pyproject.toml
tools/cleanup-untagged-images/ghcr_cleanup/: main.py
(+22 files in other folders)
