[project]
name = "ghcr-cleanup"
version = "1.0.0"
description = "Delete all untagged GHCR container versions for a repository"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
]

[project.scripts]
ghcr-cleanup = "ghcr_cleanup.main:main"

[tool.hatch.build.targets.wheel]
packages = ["ghcr_cleanup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
